# langchain-note

./: .env.example  .gitignore  pyproject.toml
src/note/langchain/00_setup/: verify.py
src/note/langchain/01_models/: basic_chat.py  model_params.py  static_vs_dynamic.py  streaming.py
src/note/langchain/02_messages/: aimessage_analysis.py  conversation_history.py  message_placeholder.py  message_types.py  multi_turn.py  serialize.py
src/note/langchain/03_tools/: builtin_tools.py  structured_tool.py  tool_metadata.py  tool_schema.py
src/note/langchain/04_agents/: static_agent.py
