[project]
name = "langchain-note"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "deepagents>=0.5.3",
    "langchain[anthropic]>=1.2.15",
    "langchain-openai>=1.2.1",
    "langgraph>=1.1.9",
    "python-dotenv>=1.2.2",
    "langchain-community>=0.4.1",
    "duckduckgo-search>=8.1.1",
    "wikipedia>=1.4.0",
    "pydantic>=2.13.3",
    "httpx>=0.28.1",
    "ddgs>=9.14.1",
    "chromadb>=1.5.8",
    "pypdf>=6.10.2",
    "reportlab>=4.4.10",
    "fastapi>=0.136.1",
    "pytest>=9.0.3",
    "langchain-mcp-adapters>=0.2.2",
]
